--- a/newform.html
+++ b/newform.html
@@ -7,7 +7,7 @@
   </head>
   <body>
     <center>
-      <form action="database.php" method="post">
+      <form action="action.php" method="post">
         <input type="number" name="id" placeholder="Enter The ID" />
         <input type="text" name="name" id="name" placeholder="Enter ur name" />
         <input
